--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
   <p>請選擇要使用的工具：</p>
 
   <div class="linkbox">
-    <a href="gsn.html">GSN 報表工具</a>
+    <a href="GSN.html">GSN 報表工具</a>
   </div>
 
   <div class="linkbox">
-    <a href="vpn.html">VPN 報表工具</a>
+    <a href="VPN.html">VPN 報表工具</a>
   </div>
 </body>
 </html>
+
