--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
   <div class="linkbox">
     <a href="VPN.html">VPN 報表工具</a>
   </div>
+
+  <div class="linkbox">
+    <a href="客服接聽量分析工具.html">客服接聽量分析工具</a>
+  </div>
+  
 </body>
 </html>
+
 
